Attempt 1 to resize stopwatch on iPhone 7 Plus

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -751,4 +751,7 @@ h3 {
         // width: 85%;
     }
 
+    .stopwatch {
+        height: 200px;
+    }
 }
